--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -59,7 +59,7 @@ ul li, ol li {
 }
 
 .section-title-header p {
-  text: center;
+  text-align: center;
   font-weight: 400;
   line-height: 26px;
   padding-bottom: 36px;
@@ -100,6 +100,7 @@ ul li, ol li {
   outline: none;
   color: #fff;
 }
+
 
 .btn-common {
   background-color: #137ED9;
